[package]
name = "valerts_bot"
version = "0.1.0"
edition = "2021"
description = ""
readme = "README.md"
homepage = ""
repository = ""
license = "MIT OR Apache-2.0"
exclude = [".github"]

[dependencies]
anyhow = "1.0.71"
dotenv = "0.15.0"
fern = { version = "0.6.2", features = ["colored"] }
log = "0.4.19"
once_cell = "1.18.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.169", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["full"] }
twilight-gateway = "0.15.2"
twilight-http = "0.15.2"
twilight-interactions = "0.15.2"
twilight-model = "0.15.2"
twilight-util = { version = "0.15.2", features = ["builder"] }
